<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="always">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginBottom="10dp"
            tools:context=".fragment.DetailsFragment">

            <TextView
                android:id="@+id/tv_details_publishedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yyyy_mm_dd_hh_mm"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_details_bookmark"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_bookmark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_details_publishedAt" />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/iv_article_image"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/icon_loading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_author" />

            <TextView
                android:id="@+id/tv_details_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/article_title"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_details_bookmark" />

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Author"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_details_title" />

            <TextView
                android:id="@+id/tv_details_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="30dp"
                android:justificationMode="inter_word"
                android:text="Article Description"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_article_image" />

            <TextView
                android:id="@+id/tv_see_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clipToPadding="false"
                android:paddingBottom="50dp"
                android:text="@string/read_more"
                android:textColor="@color/purple_700"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/tv_details_description"
                app:layout_constraintTop_toBottomOf="@id/tv_details_description" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>